--- a/app/views/outfits/_outfit.html.haml
+++ b/app/views/outfits/_outfit.html.haml
@@ -1,5 +1,6 @@
 = outfit_li_for(outfit) do
   .outfit-star
   %h4= link_to outfit.name, outfit
-  = link_to_edit_outfit '(edit)', outfit, :class => 'outfit-edit-link'
+  = link_to_edit_outfit 'Edit', outfit, :class => 'outfit-edit-link'
+  = button_to('Delete', outfit, :method => 'delete', :class => 'outfit-delete-button', :confirm => "Are you sure you want to delete the outfit #{outfit.name}?")
 
