simplify closeting item

--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -1,5 +1,5 @@
 body.items-show
-  header
+  #item-header
     border-bottom: 1px solid $module-border-color
     display: block
     margin-bottom: 1em
@@ -70,15 +70,18 @@ body.items-show
     padding: 1em .5em .5em
     width: 18em
 
-    label
+    label, header
       display: block
       font-weight: bold
 
     input[type=number]
       width: 4em
 
-    a
+    #closet-hanger-form-your-items
       display: block
       margin-top: .5em
       text-align: right
+
+    p
+      font-family: $main-font
 
