--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -13,3 +13,13 @@ body.closet_hangers-index
     clear: both
     text-align: center
 
+    .object .quantity
+      +opacity(.75)
+      background: white
+      font-size: 16px
+      font-weight: bold
+      padding: 2px 4px
+      position: absolute
+      left: ($object-width - $object-img-size) / 2 + $object-padding
+      top: $object-img-size - 24px
+
