--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -34,7 +34,8 @@ body.closet_hangers-index
           font-size: 16px
           font-weight: bold
 
-      &:hover
+    &.current-user
+      .object:hover
         .quantity
           +opacity(1)
           top: $object-img-size - 30px
