--- a/app/views/closet_hangers/_closet_hanger.html.haml
+++ b/app/views/closet_hangers/_closet_hanger.html.haml
@@ -1,9 +1,10 @@
 .object
   = render :partial => 'items/item_link', :locals => {:item => closet_hanger.item}
   .quantity
-    %span{:title => "You own #{pluralize closet_hanger.quantity, closet_hanger.item.name}"}= closet_hanger.quantity
-    = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item) do |f|
-      = hidden_field_tag :return_to, request.fullpath
-      = f.number_field :quantity, :min => 0, :required => true, :title => "You own #{pluralize closet_hanger.quantity, closet_hanger.item.name}"
-      = f.submit "Save"
+    %span= closet_hanger.quantity
+    - if user_is?(closet_hanger.user)
+      = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item) do |f|
+        = hidden_field_tag :return_to, request.fullpath
+        = f.number_field :quantity, :min => 0, :required => true, :title => "You own #{pluralize closet_hanger.quantity, closet_hanger.item.name}"
+        = f.submit "Save"
 
