--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -38,7 +38,9 @@ body.closet_hangers-index
       .object:hover
         .quantity
           +opacity(1)
-          top: $object-img-size - 30px
+          background: transparent
+          top: $object-img-size - 25px
+          padding: 0
 
           span
             display: none
