closet hangers page gets serious ajax action

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -157,8 +157,8 @@ ul.buttons
 
 .object
   +inline-block
-  margin: .5em 0
-  padding: 0 .5em
+  margin: $object-padding 0
+  padding: 0 $object-padding
   position: relative
   text-align: center
   vertical-align: top
