--- a/app/views/closet_hangers/_closet_hanger.html.haml
+++ b/app/views/closet_hangers/_closet_hanger.html.haml
@@ -1,10 +1,15 @@
+- show_controls ||= false # we could do user check here, but may as well do it once
 .object
   = render :partial => 'items/item_link', :locals => {:item => closet_hanger.item}
   .quantity
     %span= closet_hanger.quantity
-    - if user_is?(closet_hanger.user)
-      = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item) do |f|
-        = hidden_field_tag :return_to, request.fullpath
+    - if show_controls
+      = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item), :html => {:class => 'closet-hanger-update'} do |f|
+        = return_to_field_tag
         = f.number_field :quantity, :min => 0, :required => true, :title => "You own #{pluralize closet_hanger.quantity, closet_hanger.item.name}"
         = f.submit "Save"
+  - if show_controls
+    = form_tag user_item_closet_hanger_path(current_user, closet_hanger.item), :method => :delete, :class => 'closet-hanger-destroy' do
+      = return_to_field_tag
+      = submit_tag "Remove"
 
