--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -1,4 +1,5 @@
 @import "partials/context_button"
+@import "partials/icon"
 
 body.closet_hangers-index
   #title
@@ -8,12 +9,24 @@ body.closet_hangers-index
   .flash
     clear: both
 
+  #import-link, #closet-hangers-items-search
+    margin-top: .75em
+
   #import-link
     +awesome-button
     +loud-awesome-button-color
-    margin:
-      left: 2em
-      top: .75em
+    margin-left: 2em
+
+  #closet-hangers-items-search
+    float: right
+
+    input[type=search]
+      &.loading
+        background:
+          image: url(/images/loading.gif)
+          position: 2px center
+          repeat: no-repeat
+        padding-left: $icon-width + 4px
 
   #closet-hangers
     clear: both
