--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
         Dress to Impress: Preview customized Neopets' clothing and wearables
     /[if IE]
       = include_javascript_libraries :html5
+    = yield :stylesheets
     = stylesheet_link_tag "compiled/screen"
     = yield :meta
     = csrf_meta_tag
