user:owns in item search

--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -3,7 +3,7 @@
   - content_for :before_flashes do
     = link_to "Import closet from Neopets", new_closet_page_path, :id => 'import-link'
     = form_tag items_path, :method => :get, :id => 'closet-hangers-items-search', 'data-current-user-id' => current_user.id do
-      = search_field_tag :q, nil, :placeholder => "Search items"
+      = search_field_tag :q, nil, :placeholder => "Find items to add"
       = submit_tag 'Search', :name => nil
 - else
   - title "#{@user.name}'s Items"
