explain user:owns on item search

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -20,6 +20,11 @@
       %dd
         returns any item with the word "kreludor" and the phrase "altador cup"
         in it, but not the word "background"
+      %dt hat user:owns
+      %dd
+        returns
+        = link_to 'items that you own', your_items_path
+        with the word "hat"
       %dt blue is:nc
       %dd returns any NC Mall item with the word "blue" in it
       %dt collar -is:pb
